Fixed sizing issues on smaller screens (i think)

--- a/style.css
+++ b/style.css
@@ -13,13 +13,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
 
     background-color: var(--background-colour);
 }
 
 .middleCircle{
-    height: 300px;
-    width: 300px;
+    /* height: 300px;
+    width: 300px; */
+
+    height: 30vh;
+    width: 30vh;
+
     border: 1px solid #000;
 
     display: flex;
@@ -36,8 +41,12 @@
 .outerCircle{
     position: absolute;
 
-    height: 200px;
-    width: 200px;
+    /* height: 200px;
+    width: 200px; */
+
+    height: 20vh;
+    width: 20vh;
+
     border: 1px solid #000;
     border-radius: 50%;
 
@@ -47,8 +56,8 @@
 
 }
 .outerCircleImage{
-    height: 200px;
-    width: 200px;
+    height: 20vh;
+    width: 20vh;
     object-fit: cover;
     border-radius: 50%;
     
